[package]
name = "casplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
tonic = "*"
prost = "*"
prost-types = "*"
clap = { version = "3", features = ["derive"] }
sha256 = "*"
async-stream = "*"
async-recursion = "*"
uuid = { version = "0.8", features = ["v4"] }
bytes = "*"
regex = "*"
lazy_static = "*"
tracing-subscriber = "*"
tracing = "*"
base64 = "*"
lru = "*"

[build-dependencies]
tonic-build = "*"
